--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -7,7 +7,8 @@ dependencies:
   path_provider: ^0.5.0
   flutter:
     sdk: flutter
-  video_player: ^0.10.0
+  video_player:
+    path: ../../flutter_video_player/video_player/video_player
   e2e: "^0.2.0"
 
 dev_dependencies:
