--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,8 @@ dependencies:
 
 dev_dependencies:
   path_provider: ^0.5.0
-  video_player: ^0.10.0
+  video_player:
+    path: ../flutter_video_player/video_player/video_player
   flutter_test:
     sdk: flutter
   flutter_driver:
