--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,9 @@ dependencies:
 
 dev_dependencies:
   path_provider: ^0.5.0
-  video_player:
-    path: ../flutter_video_player/video_player/video_player
+  flutter_video_player:
+    git:
+      url: https://github.com/shay127/flutter_video_player
   flutter_test:
     sdk: flutter
   flutter_driver:
